version/0.24/_sources/api/solver/_autosummary/settings/cyl_orthotropic_1.rst.txt
:orphan:

.. _cyl_orthotropic_1:

cyl_orthotropic
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.cyl_orthotropic_1.cyl_orthotropic
    :show-inheritance:

.. rubric:: Attributes

========================================================   ======================

Attribute                                                                 Summary

========================================================   ======================
:ref:`axis_origin <axis_origin>`                               Specify direction.

:ref:`axis_direction <axis_direction>`                         Specify direction.

:ref:`radial_conductivity <radial_conductivity>`               Property settings.

:ref:`tangential_conductivity <tangential_conductivity>`       Property settings.

:ref:`axial_conductivity <axial_conductivity>`                 Property settings.

========================================================   ======================

.. rubric:: Included in:

====================================================   ============================================================

Parent                                                                                                      Summary

====================================================   ============================================================
:ref:`thermal_conductivity <thermal_conductivity_2>`       Thermal-conductivity property setting for this material.

====================================================   ============================================================

