version/0.28/_sources/api/solver/_autosummary/settings/cyl_orthotropic_1.rst.txt
:orphan:

.. _cyl_orthotropic_1:

cyl_orthotropic
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.cyl_orthotropic_1
    :show-inheritance:

.. rubric:: Attributes

========================================================   ============================================

Attribute                                                                                       Summary

========================================================   ============================================
:ref:`axis_origin <axis_origin>`                               Specify orthotropic property directions.

:ref:`axis_direction <axis_direction>`                         Specify orthotropic property directions.

:ref:`radial_conductivity <radial_conductivity>`                                     Property settings.

:ref:`tangential_conductivity <tangential_conductivity>`                             Property settings.

:ref:`axial_conductivity <axial_conductivity>`                                       Property settings.

========================================================   ============================================

.. rubric:: Included in:

========================================================   =================================================

Parent                                                                                               Summary

========================================================   =================================================
:ref:`thermal_conductivity_2 <thermal_conductivity_2>`          Set material property: thermal-conductivity.

:ref:`electric_conductivity_1 <electric_conductivity_1>`       Set material property: electric-conductivity.

========================================================   =================================================

